index:upload page & images lineargradient: add css animation

--- a/lineargradient/lineargradient.html
+++ b/lineargradient/lineargradient.html
@@ -33,7 +33,7 @@
             .bgc p {
                 padding-top: 70vh;
                 text-align: center;
-                animation: opacityChange 3s infinite ease-in-out;
+                animation: opacityChange 3s infinite ease-in;
             }
             @keyframes opacityChange {
                 0% {
